12/7/11 created project skeleton