@@ -1,5 +1,5 @@
 # build properties for beers-law-lab
 project.depends.data=data
 project.depends.source=src
-project.depends.lib=phetcommon piccolo-phet
+project.depends.lib=phetcommon piccolo-phet chemistry
 project.flavor.beers-law-lab.mainclass=edu.colorado.phet.beerslawlab.BeersLawLabApplication
