@@ -3,3 +3,22 @@ beers-law-lab.name=Beer's Law Lab
 
 concentration=Concentration
 beersLaw=Beer's Law
+evaporation=Evaporation
+koolAid=Kool-Aid\u00ae
+liters=L
+lots=lots
+molesPerLiter=mol/L
+none=none
+solid=Solid
+solute=Solute
+solution=Solution
+
+# Solutes
+cobaltIINitrate=cobalt (II) nitrate
+cobaltChloride=cobalt chloride
+copperSulfate=copper sulfate
+nickelIIChloride=nickel (II) chloride
+potassiumChromate=potassium chromate
+potassiumDichromate=potassium dichromate
+potassiumPermanganate=potassium permanganate
+
