@@ -1,8 +1,10 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.beerslawlab;
 
-import edu.colorado.phet.beerslawlab.modules.BeersLawModule;
-import edu.colorado.phet.beerslawlab.modules.ConcentrationModule;
+import java.awt.Frame;
+
+import edu.colorado.phet.beerslawlab.beerslaw.BeersLawModule;
+import edu.colorado.phet.beerslawlab.concentration.ConcentrationModule;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
@@ -16,8 +18,9 @@ public class BeersLawLabApplication extends PiccoloPhetApplication {
 
     public BeersLawLabApplication( PhetApplicationConfig config ) {
         super( config );
-        addModule( new ConcentrationModule() );
-        addModule( new BeersLawModule() );
+        Frame parentFrame = getPhetFrame();
+        addModule( new ConcentrationModule( parentFrame ) );
+        addModule( new BeersLawModule( parentFrame ) );
     }
 
     public static void main( final String[] args ) {
