@@ -1,0 +1,17 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.beerslawlab.beerslaw;
+
+import java.awt.Frame;
+
+import edu.colorado.phet.beerslawlab.view.BLLCanvas;
+
+/**
+ * Canvas for the "Beer's Law" module.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class BeersLawCanvas extends BLLCanvas {
+
+    public BeersLawCanvas( final BeersLawModel model, Frame parentFrame ) {
+    }
+}
