@@ -1,0 +1,20 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.beerslawlab.beerslaw;
+
+import edu.colorado.phet.common.phetcommon.model.Resettable;
+
+/**
+ * Model for the "Beer's Law" module.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class BeersLawModel implements Resettable {
+
+    public BeersLawModel() {
+        //TODO
+    }
+
+    public void reset() {
+        //TODO
+    }
+}
