@@ -1,0 +1,18 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.beerslawlab.concentration;
+
+import java.awt.Frame;
+
+import edu.colorado.phet.beerslawlab.view.BLLCanvas;
+
+/**
+ * Canvas for the "Concentration" module.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class ConcentrationCanvas extends BLLCanvas {
+
+    public ConcentrationCanvas( final ConcentrationModel model, Frame parentFrame ) {
+        //TODO
+    }
+}
